WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278809
Debug assertion occasionally triggerd in Mail via `WebUserContentControllerProxy::didPostMessage`
https://bugs.webkit.org/show_bug.cgi?id=278809
Summary
Debug assertion occasionally triggerd in Mail via `WebUserContentControllerPr...
Richard Robinson
Reported
2024-08-28 13:29:36 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-28 13:29:47 PDT
<
rdar://problem/134879673
>
Richard Robinson
Comment 2
2024-08-28 13:30:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32850
EWS
Comment 3
2024-08-28 20:33:02 PDT
Committed
282880@main
(d1ee6bc865cb): <
https://commits.webkit.org/282880@main
> Reviewed commits have been landed. Closing PR #32850 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug