Cherry-pick 282880@main (d1ee6bc865cb). https://bugs.webkit.org/show_bug.cgi?id=278809

Debug assertion occasionally triggered in Mail via `WebUserContentControllerProxy::didPostMessage`
    https://bugs.webkit.org/show_bug.cgi?id=278809
    rdar://134879673

    Reviewed by Abrar Rahman Protyasha.

    Ensure the completion handler is always called in this method.

    * Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.cpp:
    (WebKit::WebUserContentControllerProxy::didPostMessage):

    Canonical link: https://commits.webkit.org/282880@main

Canonical link: https://commits.webkit.org/274313.403@webkitglib/2.44